refactor: use Stream.toList() instead of collect(Collectors.toList())
Sonar quality gate flagged both new files (java:S6204). Behavior-identical
for these read-only lists; verified mvn verify and -Pmutation-it stay green.